2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::find_matches_at_path_iter):
	Rename from find_matches_at_iter(): add a path parameter and
	use it instead of obtaining the path from the iter argument.
	(FileTree::replace_matches_at_path_iter): Rename from
	replace_matches_at_iter(): add a path parameter and use it.
	(FileTree::find_matches): Use TreeModel::foreach() rather than
	foreach_iter() in order to gain a minor performance improvement
	by taking advantage of the supplied Gtk::TreePath.
	(FileTree::replace_all_matches): ditto.

2004-06-01  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.{cc,h} (FileTree::on_treestore_rows_reordered):
	New signal handler which updates the match boundaries defined by
	the [path_match_first_, path_match_last_] range.  Previously this
	has been handled in on_treestore_sort_column_changed(), which is
	unfortunately called before the actual sorting takes place.
	(FileTree::on_treestore_sort_column_changed): Remove.
	(FileTree::FileTree): Connect to signal_rows_reordered() instead
	of signal_sort_column_changed().

2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetreeprivate.{cc,h} (FileTreeColumns::instance): New
	static method which replaces the filetree_columns() function,
	for consistency with RegexxerTags::instance().
	(filetree_columns): Remove.

	* src/filetree.cc: Replace all instances of filetree_columns()
	with FileTreeColumns::instance().

2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/aboutdialog.glade (label_url): Get rid of the prefixed U+202D
	LEFT-TO-RIGHT OVERRIDE since Pango gets that right on its own now.
	(label_author_who): ditto

	* ui/mainwindow.glade (button_multiple): ditto
	(button_caseless): ditto.

2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (button_multiple): Set to active by default.

2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>
